# hologram

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build&test.yml  publish_crate.yml  publish_pypackage.yml
examples/: orbit_data.tar.xz  rbf_x1d_y1d.rs  rbf_x1d_y1d_large.rs  rbf_x1d_y3d.rs  rbf_x1d_y3d_large.rs  rbf_x1d_y3d_norm.rs  rbf_xnd_y1d.rs  rbf_xnd_ynd.rs
pyholo/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
pyholo/benches/: plot_x1d_y1d.py  plot_x1d_y3d.py  plot_xnd_y1d.py  rbf_x1d_y3d_bench.py  rbf_xnd_y1d_bench.py  requirements.txt
pyholo/benches/dependencies/: interpolators.py  plot_utils.py
pyholo/pyholo/: __init__.py  __init__.pyi
pyholo/src/: lib.rs  py_rbf.rs
src/: kernels.rs  lagrangian.rs  lib.rs  linear.rs  linear_algebra.rs  normalisation.rs  numeric.rs  rbf.rs  utilities.rs
