[package]
name = "hologram"
description = "Interpolation library with multipurpose Radial Basis Function (RBF)."
authors = ["Aleksander Lovric <alexlovric@gmail.com>"]
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/alexlovric/hologram"
documentation = "https://docs.rs/hologram"
readme = "README.md"
keywords = ["interpolation", "lagrangian", "rbf"]
categories = ["science", "mathematics", "simulation", "algorithms"]

[lib]
name = "hologram"
path = "src/lib.rs"
test = true
doctest = false

[dependencies]
rayon = {version = "1.10.0", optional = true}
ndarray = { version = "0.16", optional = true }
ndarray-linalg = { version = "0.17", optional = true }

[features]
default = ["rayon"]  # Run without any features with --no-default-features

# Use these features for larger datasets, will be much faster
rayon = ["dep:rayon"]
openblas = ["dep:ndarray", "dep:ndarray-linalg", "ndarray-linalg/openblas-static"]
intel-mkl = ["dep:ndarray", "dep:ndarray-linalg", "ndarray-linalg/intel-mkl-static"]

[dev-dependencies]
approx = "0.5.1"

[lints.clippy]
doc_overindented_list_items = "allow"
needless_range_loop = "allow"
