[package]
name = "pyholo"
version = "0.1.2"
edition = "2021"
description = "Python interface for halfway interpolation library, written in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyholo"
crate-type = ["cdylib"]
test = true
doctest = false

[dependencies]
hologram = { path = "../" }
pyo3 = {version = "0.21.0", features = ["abi3-py38"]}
