[build-system]
requires = ["maturin>=0.14,<2.0.0"]
build-backend = "maturin"

[project]
name = "pyholo"
version = "0.1.5"
readme = "../README.md"
license = "../LICENSE"
authors = [
    { name = "Aleksander Lovric", email = "alexlovric@gmail.com" }
]
description = "Multipurpose interpolation library focussing on RBF, written in rust."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
